// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 llwwax"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 gbKmhA"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 llwwax"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 dWrezv"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 llwwax"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 kfptEQ text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 jgjsaU"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 llwwax"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 iDULaY text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 gbKmhA"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 llwwax"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 bfvwuD text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 ggDYat"
    disabled={false}
  >
    λ
  </span>
</div>
`;
